# HERP.AuthorizationModule

./: AuthorizationModulePlugin.cpp  AuthorizationModulePlugin.h  CMakeLists.txt  HERP.AuthorizationModule.Precompiled.h  README.md  export.h  precompiled.h
client/: AuthorizationModuleClientPlugin.cpp  AuthorizationModuleClientPlugin.h  CMakeLists.txt  HERP.AuthorizationModule.Client.Precompiled.h  LogoutButton.cpp  LogoutButton.h  changeuserbutton.cpp  changeuserbutton.h  herpAuthorizationModule.qrc  qml.qrc  userchangecontroller.cpp  userchangecontroller.h  userchangeview.cpp  userchangeview.h  userdashboard.qml  userdashboarditem.cpp  userdashboarditem.h  userlist.qml
command/: AuthProvider.cpp  AuthProvider.h  CMakeLists.txt  ListAuthGroupCommand.cpp  ListAuthGroupCommand.h  addusercommand.cpp  addusercommand.h
data/: AuthGranted.cpp  AuthGranted.h  AuthGrantedParam.cpp  AuthGrantedParam.h  AuthGroup.cpp  AuthGroup.h  AuthObject.cpp  AuthObject.h  AuthObjectParam.cpp  AuthObjectParam.h  AuthServiceMethod.cpp  AuthServiceMethod.h  AuthUser.cpp  AuthUser.h  AuthUserToken.cpp  AuthUserToken.h  CMakeLists.txt
dataService/: AuthServiceMethodModelService.cpp  AuthServiceMethodModelService.h  AuthServiceMethodService.cpp  AuthServiceMethodService.h  AuthUserService.cpp  AuthUserService.h  authparameter.cpp  authparameter.h  authservicebase.cpp  authservicebase.h
entity/: CurrentUserFunction.cpp  CurrentUserFunction.h  UserEntity.cpp  UserEntity.h  UserEntitySet.cpp  UserEntitySet.h
frontend/controller/: Settings.controller.js
frontend/view/: Settings.view.xml
webServices/: WebAuthorization.cpp  WebAuthorization.h
